[tool.black]
line-length = 79

[tool.isort]
profile = "black"
line_length = 79

[tool.pydocstyle]
convention = "google"

[tool.mypy]
ignore_missing_imports = true

[tool.poetry]
name = "imgtools"
version = "0.1.0"
description = "Collection of tools that work on images"
authors = ["Harish Rajagopal <harish.rajagopals@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.19.5"
Pillow = "^8.1.0"
tqdm = "^4.56.0"

[tool.poetry.dev-dependencies]
pre-commit = "^2.10.0"

[tool.poetry.scripts]
imgtools = 'imgtools:__main__'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
